# boost.app.minimal

./: .gitignore  .gitmodules  CMakeLists.txt
include/: service.hpp
src/: main.cpp
